@@ -53,7 +53,8 @@ static int qsv_init_session(AVCodecContext *avctx, QSVContext *q, mfxSession ses
 {
     if (!session) {
         if (!q->internal_session) {
-            int ret = ff_qsv_init_internal_session(avctx, &q->internal_session, NULL);
+            int ret = ff_qsv_init_internal_session(avctx, &q->internal_session,
+                                                   q->load_plugins);
             if (ret < 0)
                 return ret;
         }
