@@ -40,6 +40,7 @@ version <next>:
 - Go2Meeting decoding support
 - Intel QSV-accelerated MPEG-2 video and HEVC encoding
 - bitstream filter for converting HEVC from MP4 to Annex B
+- Intel QSV-accelerated MPEG-2 video and HEVC decoding
 
 
 version 11:
